@@ -92,7 +92,8 @@ a:active {
 a:hover {
 	text-decoration: underline;
 }
-a.stub {
+a.stub,
+span.mw-stub-example {
 	color: #772233;
 }
 a.new, #p-personal a.new {
